@@ -13,10 +13,12 @@ import static com.agh.hydra.core.auth.TokenProvider.getToken;
 interface AuthFilter {
 
     String HEADER_AUTHORIZATION = "Authorization";
+    String HEADER_USER_ID = "X-User-Id";
     String TOKEN_PREFIX = "Bearer";
     String ATTRIBUTE_USER_ID = "userId";
 
-    default void addAuthorizationHeader(String userId, HttpServletResponse response) {
+    default void addAuthHeaders(String userId, HttpServletResponse response) {
         response.addHeader(HEADER_AUTHORIZATION, TOKEN_PREFIX + " " + getToken(userId));
+        response.addHeader(HEADER_USER_ID, userId);
     }
 }
