@@ -1,3 +1,4 @@
+ - #75 add 'x-user-id' header to server response
  - #67 impl for service : GET /referral/referrals
  - #70 impl for service : PUT /referral/invalidate
  - #66 impl for service : POST /referral/add
